prueba 3 de galeria con grid

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,10 +57,7 @@
 			<a href="index.html"><img src="img/logo.png" alt=""></a>
 			<!-- <h1>Pacifica</h1>
 				<h2>Ezequiel Gil <strong>Arquitecto</strong></h2> -->
-		</header>
-
-		<!-- Portfolio close button -->
-		<a href="#" id="portfolio-close"></a>
+		</header>	
 
 	</div>
 
@@ -90,7 +87,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#primero" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)">
+						<a href="cincofuegos.html" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">CINCO FUEGOS</h3>
@@ -100,7 +97,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#crystal" class="image" style="background-image: url(img/casas/crystal_portada.jpg)">
+						<a href="#" class="image" style="background-image: url(img/casas/crystal_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">CRYSTAL</h3>
@@ -110,7 +107,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#eldescanso" class="image" style="background-image: url(img/casas/eldescanso_portada.jpg)">
+						<a href="#" class="image" style="background-image: url(img/casas/eldescanso_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">EL DESCANSO</h3>
@@ -120,7 +117,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/ironhaus_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/ironhaus_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">IRON HAUS</h3>
@@ -130,7 +127,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/mahimahi_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/mahimahi_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">MAHI MAHI</h3>
@@ -140,7 +137,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/pacific_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/pacific_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">PACIFIC O</h3>
@@ -150,7 +147,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/saldelima_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/saldelima_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">SAL DE LIMA</h3>
@@ -160,7 +157,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/pinebeach_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/pinebeach_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">PINE BEACH</h3>
@@ -171,7 +168,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/dosmares_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/dosmares_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">DOS MARES</h3>
@@ -181,7 +178,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/salsabrava_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/salsabrava_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">SALSA BRAVA</h3>
@@ -191,7 +188,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/santapaula_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/santapaula_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">SANTA PAULA</h3>
@@ -201,7 +198,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/180south_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/180south_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">180 SOUTH</h3>
@@ -211,7 +208,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/animal_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/animal_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">ANIMAL</h3>
@@ -221,7 +218,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/beton_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/beton_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">BETON BOIS</h3>
@@ -231,7 +228,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/biscayne_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/biscayne_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">BISCAYNE</h3>
@@ -241,7 +238,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/chillbeach_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/chillbeach_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">CHILL BEACH</h3>
@@ -251,7 +248,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/deau_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/deau_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">D'EAU</h3>
@@ -261,7 +258,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/fly_cat.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/fly_cat.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">FLY CAT</h3>
@@ -271,7 +268,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/surfersparadise_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/surfersparadise_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">SURFERS PARADISE</h3>
@@ -281,7 +278,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/virazon_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/virazon_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">VIRAZON</h3>
@@ -291,7 +288,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/alaia_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/alaia_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">ALAIA</h3>
@@ -301,7 +298,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/hut_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/hut_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">CINCO FUEGOS</h3>
@@ -311,7 +308,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/eleuthera_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/eleuthera_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">ELEUTHERA</h3>
@@ -321,7 +318,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/lavista_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/lavista_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">LA VISTA</h3>
@@ -331,7 +328,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/oldwoody_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/oldwoody_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">OLD WOODY</h3>
@@ -342,7 +339,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/terrazas_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/casas/terrazas_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">TERRAZAS</h3>
@@ -369,7 +366,7 @@
 				<nav id="mainmenu">
 					<ul>
 						<li><a href="portfolio.html">Casas</a></li>
-						<li><a href="lifestyle.html">Lifestyle</a></li>
+						<li><a href="lifestyle_2.html">Lifestyle</a></li>
 						<li><a href="desarrollos.html">Desarrollos</a></li>
 						<li><a href="#">El Estudio</a>
 							<ul>
@@ -377,7 +374,7 @@
 								<li><a href="estudio.html">Fotos</a></li>
 							</ul>
 						</li>
-						<li><a href="interiores.html">Diseño de Interiores</a></li>
+						<li><a href="interiores_2.html">Diseño de Interiores</a></li>
 						<li><a href="contacto.html">Contacto</a></li>
 						<li><a href="instagram.html">Instagram</a></li>
 
