--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,39 @@
 		</header>	
 
 	</div>
+<!-- Collapsible sidebar -->
+<div id="sidebar">
+
+	<!-- Widget Area -->
+	<div id="widgets">
+
+		<!-- Main menu -->
+		<nav id="mainmenu">
+			<ul>
+				<li><a href="portfolio.html">Casas</a></li>
+				<li><a href="lifestyle_2.html">Lifestyle</a></li>
+				<li><a href="desarrollos.html">Desarrollos</a></li>
+				<li><a href="#">El Estudio</a>
+					<ul>
+						<li><a href="quienesomos.html">Quienes Somos</a></li>
+						<li><a href="estudio.html">Fotos</a></li>
+					</ul>
+				</li>
+				<li><a href="interiores_2.html">Diseño de Interiores</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
+				<li><a href="instagram.html">Instagram</a></li>
+
+			</ul>
+		</nav>
+
+	</div>
+
+	<!-- Copyright -->
+	<div>
+		<p class="copyright">© Copyright 2018 Pacifica</p>
+	</div>
+
+</div>
 
 	<!-- Main wrapper -->
 	<div id="main-wrapper">
@@ -71,16 +104,12 @@
 			<div class="container-fluid">
 
 				<!-- Page heading -->
-				<div id="heading" class="row">
-					<div class="filter col-12">
 
-						<header>
+						<header id="heading">
 							<h1>Casas</h1>
 							<h2></h2>
 						</header>
 
-					</div>
-				</div>
 
 				<!-- Main content -->
 				<div class=" row">
@@ -355,150 +384,61 @@
 			</div>
 
 		</div>
-
-		<!-- Collapsible sidebar -->
-		<div id="sidebar">
-
-			<!-- Widget Area -->
-			<div id="widgets">
-
-				<!-- Main menu -->
-				<nav id="mainmenu">
-					<ul>
-						<li><a href="portfolio.html">Casas</a></li>
-						<li><a href="lifestyle_2.html">Lifestyle</a></li>
-						<li><a href="desarrollos.html">Desarrollos</a></li>
-						<li><a href="#">El Estudio</a>
-							<ul>
-								<li><a href="quienesomos.html">Quienes Somos</a></li>
-								<li><a href="estudio.html">Fotos</a></li>
-							</ul>
-						</li>
-						<li><a href="interiores_2.html">Diseño de Interiores</a></li>
-						<li><a href="contacto.html">Contacto</a></li>
-						<li><a href="instagram.html">Instagram</a></li>
-
-					</ul>
-				</nav>
-
-			</div>
-
-			<!-- Copyright -->
-			<div>
-				<p class="copyright">© Copyright 2018 Pacifica</p>
-			</div>
-
-		</div>
-
-		<!-- Portfolio full -->
-		<div id="primero" class="portfolio-full portfolio-full-slidedown">
-
-			<!-- Portfolio description -->
-			<div class="portfolio-description">
-				<h3>CINCO FUEGOS</h3>
-				<div class="icon-text">
-					<i class="fa fa-map-marker"></i>
-					<p>Buenos Aires - 300 M2</p>
-				</div>
-				<!-- <div class="icon-text">
-						<i class="fa fa-users"></i>
-						<p>Construcción: Insaco S.A</p>
-					</div> -->
-
-			</div>
-
-			<!-- Portfolio image slider -->
-			<div class="swiper swiper-container">
-
-				<div class="swiper-wrapper">
-
-					<!-- Slide -->
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_01.jpg);"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_02.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_03.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_04.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_05.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_06.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_07.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_08.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_09.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_10.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_11.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_12.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_13.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_14.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_15.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_16.jpg)"></div>
-
-
-
-				</div>
-
-				<!-- Slider navigation arrows -->
-				<a class="nav-arrow nav-left" href="#"></a>
-				<a class="nav-arrow nav-right" href="#"></a>
-
-			</div>
-
-		</div>
-
-	</div>
-
-	<footer class="footer-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-5">
-					<div class="footer-cta">
-						<div class="footer-widget-heading">
-							<h3>Pacífica</h3>
+<footer class="footer-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-sm-5">
+				<div class="footer-cta">
+					<div class="footer-widget-heading">
+						<h3>Pacífica</h3>
+					</div>
+					<div class="single-cta">
+						<i class="fa fa-map-marker"></i>
+						<div class="cta-text">
+							<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
 						</div>
-						<div class="single-cta">
-							<i class="fa fa-map-marker"></i>
-							<div class="cta-text">
-								<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
-							</div>
+					</div>
+					<div class="single-cta">
+						<i class="fa fa-phone"></i>
+						<div class="cta-text">
+							<span>4737.0086</span>
 						</div>
-						<div class="single-cta">
-							<i class="fa fa-phone"></i>
-							<div class="cta-text">
-								<span>4737.0086</span>
-							</div>
+					</div>
+					<div class="single-cta">
+						<i class="fa fa-envelope"></i>
+						<div class="cta-text">
+							<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
 						</div>
-						<div class="single-cta">
-							<i class="fa fa-envelope"></i>
-							<div class="cta-text">
-								<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
-							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-instagram"></i>
-							<div class="cta-text">
-								<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
-							</div>
+					</div>
+					<div class="single-cta">
+						<i class="fa fa-instagram"></i>
+						<div class="cta-text">
+							<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-7">
-					<div class="footer-content">
-						<div class="row">
-							<div class="col-xs-12">
-								<div class="footer-widget">
-									<div class="footer-widget-heading">
-										<h3>Sitio</h3>
-									</div>
-									<ul>
-										<li><a href="portfolio.html">Casas</a></li>
-										<li><a href="lifestyle.html">Lifestyle</a></li>
-										<li><a href="desarrollos.html">Desarrollos</a></li>
-										<li><a href="quienesomos.html">Quienes Somos</a></li>
-										<li><a href="estudio.html">Fotos</a></li>
-										<li><a href="interiores.html">Diseño de Interiores</a></li>
-										<li><a href="contacto.html">Contacto</a></li>
-										<li><a href="instagram.html">Instagram</a></li>
-									</ul>
+			</div>
+			<div class="col-xs-12 col-sm-7">
+				<div class="footer-content">
+					<div class="row">
+						<div class="col-xs-12">
+							<div class="footer-widget">
+								<div class="footer-widget-heading">
+									<h3>Sitio</h3>
 								</div>
+								<ul>
+									<li><a href="portfolio.html">Casas</a></li>
+									<li><a href="lifestyle.html">Lifestyle</a></li>
+									<li><a href="desarrollos.html">Desarrollos</a></li>
+									<li><a href="quienesomos.html">Quienes Somos</a></li>
+									<li><a href="estudio.html">Fotos</a></li>
+									<li><a href="interiores.html">Diseño de Interiores</a></li>
+									<li><a href="contacto.html">Contacto</a></li>
+									<li><a href="instagram.html">Instagram</a></li>
+								</ul>
 							</div>
-							<!-- <div class="col-xs-12 col-sm-6">
+						</div>
+						<!-- <div class="col-xs-12 col-sm-6">
 								<div class="footer-widget">
 									<div class="footer-widget-heading">
 										<h3>Seguinos</h3>
@@ -508,24 +448,30 @@
 									</div>
 								</div>
 							</div> -->
-						</div>
 					</div>
 				</div>
-
 			</div>
-			<div class="sub-footer">
-				<div class="copyright-text">
-					<p>© Copyright 2019 Pacifica</p>
-				</div>
-				<div class="footer-menu">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-					</ul>
-				</div>
+
+		</div>
+		<div class="sub-footer">
+			<div class="copyright-text">
+				<p>© Copyright 2019 Pacifica</p>
+			</div>
+			<div class="footer-menu">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+				</ul>
 			</div>
 		</div>
+	</div>
 
-	</footer>
+</footer>
+
+		
+
+	</div>
+
+	
 
 	<!-- JavaScripts -->
 	<script type='text/javascript' src='js/jquery.min.js'></script>
