--- a/desarrollos.html
+++ b/desarrollos.html
@@ -63,35 +63,64 @@
 		<a href="#" id="portfolio-close"></a>
 
 	</div>
+	<!-- Collapsible sidebar -->
+	<div id="sidebar">
+
+		<!-- Widget Area -->
+		<div id="widgets">
+
+			<!-- Main menu -->
+			<nav id="mainmenu">
+				<ul>
+					<li><a href="portfolio.html">Casas</a></li>
+					<li><a href="lifestyle.html">Lifestyle</a></li>
+					<li><a href="desarrollos.html">Desarrollos</a></li>
+					<li><a href="#">El Estudio</a>
+						<ul>
+							<li><a href="quienesomos.html">Quienes Somos</a></li>
+							<li><a href="estudio.html">Fotos</a></li>
+						</ul>
+					</li>
+					<li><a href="interiores.html">Diseño de Interiores</a></li>
+					<li><a href="contacto.html">Contacto</a></li>
+					<li><a href="instagram.html">Instagram</a></li>
+
+				</ul>
+			</nav>
+
+		</div>
+
+		<!-- Copyright -->
+		<div>
+			<p class="copyright">© Copyright 2018 Pacifica</p>
+		</div>
+
+	</div>
 
 	<!-- Main wrapper -->
 	<div id="main-wrapper">
 
 		<!-- Content -->
-		<div id="content" class="isotope-container">
+		<div id="content">
 
 			<!-- Fluid container -->
 			<div class="container-fluid">
 
 				<!-- Page heading -->
-				<div id="heading" class="row">
-					<div class="filter col-12">
 
-						<header>
-							<h1>Desarrollos</h1>
-							<h2></h2>
-						</header>
+				<header id="heading">
+					<h1>Desarrollos</h1>
+					<h2></h2>
+				</header>
 
 
 
-					</div>
-				</div>
 
 				<!-- Main content -->
 				<div class=" row">
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="#jingenieros" class="image" style="background-image: url(img/desarrollos/jingenierios_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -101,7 +130,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="" class="image" style="background-image: url(img/desarrollos/brasil_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -111,7 +140,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="" class="image" style="background-image: url(img/desarrollos/rincon_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -121,7 +150,7 @@
 					</article>
 
 					<!-- Portfolio item -->
-					<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
 						<a href="" class="image" style="background-image: url(img/desarrollos/edpacifica_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
@@ -134,137 +163,94 @@
 
 			</div>
 
-		</div>
-
-		<!-- Collapsible sidebar -->
-		<div id="sidebar">
-
-			<!-- Widget Area -->
-			<div id="widgets">
-
-				<!-- Main menu -->
-				<nav id="mainmenu">
-					<ul>
-						<li><a href="portfolio.html">Casas</a></li>
-						<li><a href="lifestyle.html">Lifestyle</a></li>
-						<li><a href="desarrollos.html">Desarrollos</a></li>
-						<li><a href="#">El Estudio</a>
-							<ul>
-								<li><a href="quienesomos.html">Quienes Somos</a></li>
-								<li><a href="estudio.html">Fotos</a></li>
-							</ul>
-						</li>
-						<li><a href="interiores.html">Diseño de Interiores</a></li>
-						<li><a href="contacto.html">Contacto</a></li>
-						<li><a href="instagram.html">Instagram</a></li>
-
-					</ul>
-				</nav>
-
-			</div>
-
-			<!-- Copyright -->
-			<div>
-				<p class="copyright">© Copyright 2018 Pacifica</p>
-			</div>
 
 		</div>
+		<!-- Footer -->
 		<footer class="footer-section">
 			<div class="container">
-				<div class="footer-cta">
-					<div class="row">
-						<div class="col-xs-12 col-md-4">
+				<div class="row">
+					<div class="col-xs-12 col-sm-5">
+						<div class="footer-cta">
+							<div class="footer-widget-heading">
+								<h3>Pacífica</h3>
+							</div>
 							<div class="single-cta">
 								<i class="fa fa-map-marker"></i>
 								<div class="cta-text">
-									<h4>Ubicacion</h4>
 									<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
 								</div>
 							</div>
-						</div>
-						<div class="col-xs-12 col-md-4">
 							<div class="single-cta">
 								<i class="fa fa-phone"></i>
 								<div class="cta-text">
-									<h4>Llamanos</h4>
 									<span>4737.0086</span>
 								</div>
 							</div>
-						</div>
-						<div class="col-xs-12 col-md-4">
 							<div class="single-cta">
 								<i class="fa fa-envelope"></i>
 								<div class="cta-text">
-									<h4>Email</h4>
 									<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
 								</div>
 							</div>
-						</div>
-					</div>
-				</div>
-				<div class="footer-content">
-					<div class="row">
-						<div class="col-xs-12 col-md-4">
-							<div class="footer-widget">
-								<div class="footer-logo">
-									<a href="index.html"><img src="./img/logo-w.png" class="img-fluid" alt="logo"></a>
-								</div>
-								<div class="footer-text">
-									<p>Pacífica Arquitectura, estudio con sede en Buenos Aires, dedicado principalmente a realizar diseños y
-										construcción de casas de alta gama, edificios, ambientación y decoración.</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-12 col-md-4">
-							<div class="footer-widget">
-								<div class="footer-widget-heading">
-									<h3>Sitio</h3>
-								</div>
-								<ul>
-									<li><a href="portfolio.html">Casas</a></li>
-									<li><a href="lifestyle.html">Lifestyle</a></li>
-									<li><a href="desarrollos.html">Desarrollos</a></li>
-									<li><a href="quienesomos.html">Quienes Somos</a></li>
-									<li><a href="estudio.html">Fotos</a></li>
-									<li><a href="interiores.html">Diseño de Interiores</a></li>
-									<li><a href="contacto.html">Contacto</a></li>
-									<li><a href="instagram.html">Instagram</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-xs-12 col-md-4">
-							<div class="footer-widget">
-								<div class="footer-widget-heading">
-									<h3>Seguinos</h3>
-								</div>
-								<div class="single-cta">
-									<a href="https://www.instagram.com/arq.ezequielgil/"><i class="fa fa-instagram"></i></a>
+							<div class="single-cta">
+								<i class="fa fa-instagram"></i>
+								<div class="cta-text">
+									<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
 								</div>
 							</div>
 						</div>
 					</div>
+					<div class="col-xs-12 col-sm-7">
+						<div class="footer-content">
+							<div class="row">
+								<div class="col-xs-12">
+									<div class="footer-widget">
+										<div class="footer-widget-heading">
+											<h3>Sitio</h3>
+										</div>
+										<ul>
+											<li><a href="portfolio.html">Casas</a></li>
+											<li><a href="lifestyle.html">Lifestyle</a></li>
+											<li><a href="desarrollos.html">Desarrollos</a></li>
+											<li><a href="quienesomos.html">Quienes Somos</a></li>
+											<li><a href="estudio.html">Fotos</a></li>
+											<li><a href="interiores.html">Diseño de Interiores</a></li>
+											<li><a href="contacto.html">Contacto</a></li>
+											<li><a href="instagram.html">Instagram</a></li>
+										</ul>
+									</div>
+								</div>
+								<!-- <div class="col-xs-12 col-sm-6">
+								<div class="footer-widget">
+									<div class="footer-widget-heading">
+										<h3>Seguinos</h3>
+									</div>
+									<div class="single-cta ig">
+										<a href="https://www.instagram.com/arq.ezequielgil/"><i class="fa fa-instagram"></i></a>
+									</div>
+								</div>
+							</div> -->
+							</div>
+						</div>
+					</div>
+
 				</div>
-			</div>
-			<div class="copyright-area">
-				<div class="container container-copy">
-					<div class="row">
-						<div class="col-xl-6 col-lg-6 col-xs-7">
-							<div class="copyright-text">
-								<p>© Copyright 2018 Pacifica</p>
-							</div>
-						</div>
-						<div class="col-xl-6 col-lg-6 col-xs-5 text-right">
-							<div class="footer-menu">
-								<ul>
-									<li><a href="index.html">Home</a></li>
-									<li><a href="contacto.html">Contact</a></li>
-								</ul>
-							</div>
-						</div>
+				<div class="sub-footer">
+					<div class="copyright-text">
+						<p>© Copyright 2019 Pacifica</p>
+					</div>
+					<div class="footer-menu">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
+
 		</footer>
+
+
+
 
 		<!-- Portfolio full -->
 		<div id="jingenieros" class="portfolio-full portfolio-full-slidedown">
