--- a/estudio.html
+++ b/estudio.html
@@ -37,6 +37,8 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/idangerous.swiper.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/default-skin/default-skin.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -66,222 +68,194 @@
 
 	</div>
 
-	<!-- Main wrapper -->
-	<div id="main-wrapper">
+	<!-- Collapsible sidebar -->
+	<div id="sidebar">
 
-		<!-- Content -->
-		<div id="content" class="isotope-container">
+		<!-- Widget Area -->
+		<div id="widgets">
 
-			<!-- Fluid container -->
-			<div class="container-fluid">
-
-				<!-- Page heading -->
-				<div id="heading" class="row">
-					<div class="filter col-12">
-
-						<header>
-							<h1>El Estudio</h1>
-							<h2>Fotos</h2>
-						</header>
-
-
-					</div>
-				</div>
-
-				<!-- Main content -->
-				<div class="isotope isotope-3 row">
-
-					<!-- Portfolio item -->
-
-					<article class="portfolio isotope-item col-6">
-						<a href="#estudio" class="image" style="background-image: url(img/team/estudio_02.jpg)"></a>
-					</article>
-					<article class="portfolio isotope-item col-6">
-						<a href="#estudio" class="image" style="background-image: url(img/team/estudio_03.jpg)"></a>
-					</article>
-					<article class="portfolio isotope-item col-6">
-						<a href="#estudio" class="image" style="background-image: url(img/team/estudio_04.jpg)"></a>
-					</article>
-					<article class="portfolio isotope-item col-6">
-						<a href="#estudio" class="image" style="background-image: url(img/team/estudio_05.jpg)"></a>
-					</article>
-					<article class="portfolio isotope-item col-6">
-						<a href="#estudio" class="image" style="background-image: url(img/team/estudio_06.jpg)"></a>
-					</article>
-					<article class="portfolio isotope-item col-6">
-						<a href="#estudio" class="image" style="background-image: url(img/team/estudio_07.jpg)"></a>
-					</article>
-					<article class="portfolio isotope-item col-6">
-						<a href="#estudio" class="image" style="background-image: url(img/team/estudio_08.jpg)"></a>
-					</article>
-					<article class="portfolio isotope-item col-6">
-						<a href="#estudio" class="image" style="background-image: url(img/team/estudio_09.jpg)"></a>
-					</article>
-					<article class="portfolio isotope-item col-6">
-						<a href="#estudio" class="image" style="background-image: url(img/team/estudio_10.jpg)"></a>
-					</article>
-					<article class="portfolio isotope-item col-6">
-						<a href="#estudio" class="image" style="background-image: url(img/team/estudio_11.jpg)"></a>
-					</article>
-
-
-
-				</div>
-
-				<!-- Pagination -->
-				<div class="pagination-row row">
-					<div class="col-12">
-
-						<ul class="pag">
-							<li><a href="#">Ver m&aacute;s</a></li>
-
+			<!-- Main menu -->
+			<nav id="mainmenu">
+				<ul>
+					<li><a href="portfolio.html">Casas</a></li>
+					<li><a href="lifestyle.html">Lifestyle</a></li>
+					<li><a href="desarrollos.html">Desarrollos</a></li>
+					<li><a href="#">El Estudio</a>
+						<ul>
+							<li><a href="quienesomos.html">Quienes Somos</a></li>
+							<li><a href="estudio.html">Fotos</a></li>
 						</ul>
-
-					</div>
-				</div>
-
-			</div>
-
-		</div>
-
-		<!-- Collapsible sidebar -->
-		<div id="sidebar">
-
-			<!-- Widget Area -->
-			<div id="widgets">
-
-				<!-- Main menu -->
-				<nav id="mainmenu">
-					<ul>
-						<li><a href="portfolio.html">Casas</a></li>
-						<li><a href="lifestyle.html">Lifestyle</a></li>
-						<li><a href="desarrollos.html">Desarrollos</a></li>
-						<li><a href="#">El Estudio</a>
-							<ul>
-								<li><a href="quienesomos.html">Quienes Somos</a></li>
-								<li><a href="estudio.html">Fotos</a></li>
-							</ul>
-						</li>
-						<li><a href="interiores.html">Diseño de Interiores</a></li>
-						<li><a href="contacto.html">Contacto</a></li>
-						<li><a href="instagram.html">Instagram</a></li>
-					</ul>
-				</nav>
-
-			</div>
-
-			<!-- Copyright -->
-			<div>
-				<p class="copyright">© Copyright 2018 Pacifica</p>
-			</div>
+					</li>
+					<li><a href="interiores.html">Diseño de Interiores</a></li>
+					<li><a href="contacto.html">Contacto</a></li>
+					<li><a href="instagram.html">Instagram</a></li>
+				</ul>
+			</nav>
 
 		</div>
 
-		<!-- Portfolio full -->
-		<div id="estudio" class="portfolio-full portfolio-full-slidedown">
-
-			<!-- Portfolio description -->
-			<!-- <div class="portfolio-description">
-				<h3>Pac&iacute;fica</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin
-					erat mi, pulvinar ut magna eget, consectetur auctor turpis. Lorem ipsum dolor sit amet, consectetur adipisicing
-					elit. Modi tempora neque perferendis nobis officia fuga nulla ut nostrum sed ea. </p>
-				<div class="icon-text">
-					<i class="fa fa-calendar-o"></i>
-					<p>Fundado el el 10/10/10</p>
-				</div>
-				<div class="icon-text">
-					<i class="fa fa-users"></i>
-					<p>8 personas involucradas</p>
-				</div>
-
-			</div> -->
-
-			<!-- Portfolio image slider -->
-			<div class="swiper swiper-container">
-
-				<div class="swiper-wrapper">
-
-					<!-- Slide -->
-					<div class="swiper-slide" style="background-image: url(img/team/estudio_02.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/team/estudio_03.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/team/estudio_04.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/team/estudio_05.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/team/estudio_06.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/team/estudio_07.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/team/estudio_08.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/team/estudio_09.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/team/estudio_10.jpg)"></div>
-					<div class="swiper-slide" style="background-image: url(img/team/estudio_11.jpg)"></div>
-
-
-				</div>
-
-				<!-- Slider navigation arrows -->
-				<a class="nav-arrow nav-left" href="#"></a>
-				<a class="nav-arrow nav-right" href="#"></a>
-
-			</div>
-
+		<!-- Copyright -->
+		<div>
+			<p class="copyright">© Copyright 2018 Pacifica</p>
 		</div>
 
 	</div>
 
-	<footer class="footer-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-5">
-					<div class="footer-cta">
-						<div class="footer-widget-heading">
-							<h3>Pacífica</h3>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-map-marker"></i>
-							<div class="cta-text">
-								<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
+	<!-- Main wrapper -->
+	<div id="main-wrapper">
+
+		<!-- Content -->
+		<div id="content">
+
+			<!-- Fluid container -->
+			<div class="container">
+
+				<!-- Page heading -->
+
+				<header id="heading">
+					<h1>El Estudio</h1>
+					<h2>Fotos</h2>
+				</header>
+
+
+
+				<!-- Main content -->
+				<div class="normal-gallery row" itemscope>
+
+					<!-- Portfolio item -->
+					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
+						<a href="./img/team/estudio_01.jpg" data-size="1280x720">
+							<img src="./img/team/estudio_01.jpg" itempropo alt="">
+						</a>
+					</figure>
+					<!-- Portfolio item -->
+					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
+						<a href="./img/team/estudio_02.jpg" data-size="1280x720">
+							<img src="./img/team/estudio_02.jpg" itempropo alt="">
+						</a>
+					</figure>
+					<!-- Portfolio item -->
+					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
+						<a href="./img/team/estudio_03.jpg" data-size="1280x720">
+							<img src="./img/team/estudio_03.jpg" itempropo alt="">
+						</a>
+					</figure>
+					<!-- Portfolio item -->
+					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
+						<a href="./img/team/estudio_04.jpg" data-size="1280x720">
+							<img src="./img/team/estudio_04.jpg" itempropo alt="">
+						</a>
+					</figure>
+					<!-- Portfolio item -->
+					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
+						<a href="./img/team/estudio_05.jpg" data-size="1280x720">
+							<img src="./img/team/estudio_05.jpg" itempropo alt="">
+						</a>
+					</figure>
+					<!-- Portfolio item -->
+					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
+						<a href="./img/team/estudio_06.jpg" data-size="1280x720">
+							<img src="./img/team/estudio_06.jpg" itempropo alt="">
+						</a>
+					</figure>
+					<!-- Portfolio item -->
+					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
+						<a href="./img/team/estudio_07.jpg" data-size="1280x720">
+							<img src="./img/team/estudio_07.jpg" itempropo alt="">
+						</a>
+					</figure>
+					<!-- Portfolio item -->
+					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
+						<a href="./img/team/estudio_08.jpg" data-size="1280x720">
+							<img src="./img/team/estudio_08.jpg" itempropo alt="">
+						</a>
+					</figure>
+					<!-- Portfolio item -->
+					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
+						<a href="./img/team/estudio_09.jpg" data-size="1280x720">
+							<img src="./img/team/estudio_09.jpg" itempropo alt="">
+						</a>
+					</figure>
+					<!-- Portfolio item -->
+					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
+						<a href="./img/team/estudio_10.jpg" data-size="1280x720">
+							<img src="./img/team/estudio_10.jpg" itempropo alt="">
+						</a>
+					</figure>
+					<!-- Portfolio item -->
+					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
+						<a href="./img/team/estudio_11.jpg" data-size="1280x720">
+							<img src="./img/team/estudio_11.jpg" itempropo alt="">
+						</a>
+					</figure>
+
+					
+
+
+
+				</div>
+
+
+			</div>
+
+		</div>
+
+		<!-- Footer -->
+		<footer class="footer-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-5">
+						<div class="footer-cta">
+							<div class="footer-widget-heading">
+								<h3>Pacífica</h3>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-phone"></i>
-							<div class="cta-text">
-								<span>4737.0086</span>
+							<div class="single-cta">
+								<i class="fa fa-map-marker"></i>
+								<div class="cta-text">
+									<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
+								</div>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-envelope"></i>
-							<div class="cta-text">
-								<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
+							<div class="single-cta">
+								<i class="fa fa-phone"></i>
+								<div class="cta-text">
+									<span>4737.0086</span>
+								</div>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-instagram"></i>
-							<div class="cta-text">
-								<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
+							<div class="single-cta">
+								<i class="fa fa-envelope"></i>
+								<div class="cta-text">
+									<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
+								</div>
+							</div>
+							<div class="single-cta">
+								<i class="fa fa-instagram"></i>
+								<div class="cta-text">
+									<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-xs-12 col-sm-7">
-					<div class="footer-content">
-						<div class="row">
-							<div class="col-xs-12">
-								<div class="footer-widget">
-									<div class="footer-widget-heading">
-										<h3>Sitio</h3>
+					<div class="col-xs-12 col-sm-7">
+						<div class="footer-content">
+							<div class="row">
+								<div class="col-xs-12">
+									<div class="footer-widget">
+										<div class="footer-widget-heading">
+											<h3>Sitio</h3>
+										</div>
+										<ul>
+											<li><a href="portfolio.html">Casas</a></li>
+											<li><a href="lifestyle.html">Lifestyle</a></li>
+											<li><a href="desarrollos.html">Desarrollos</a></li>
+											<li><a href="quienesomos.html">Quienes Somos</a></li>
+											<li><a href="estudio.html">Fotos</a></li>
+											<li><a href="interiores.html">Diseño de Interiores</a></li>
+											<li><a href="contacto.html">Contacto</a></li>
+											<li><a href="instagram.html">Instagram</a></li>
+										</ul>
 									</div>
-									<ul>
-										<li><a href="portfolio.html">Casas</a></li>
-										<li><a href="lifestyle.html">Lifestyle</a></li>
-										<li><a href="desarrollos.html">Desarrollos</a></li>
-										<li><a href="quienesomos.html">Quienes Somos</a></li>
-										<li><a href="estudio.html">Fotos</a></li>
-										<li><a href="interiores.html">Diseño de Interiores</a></li>
-										<li><a href="contacto.html">Contacto</a></li>
-										<li><a href="instagram.html">Instagram</a></li>
-									</ul>
 								</div>
-							</div>
-							<!-- <div class="col-xs-12 col-sm-6">
+								<!-- <div class="col-xs-12 col-sm-6">
 								<div class="footer-widget">
 									<div class="footer-widget-heading">
 										<h3>Seguinos</h3>
@@ -291,32 +265,105 @@
 									</div>
 								</div>
 							</div> -->
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="sub-footer">
+					<div class="copyright-text">
+						<p>© Copyright 2019 Pacifica</p>
+					</div>
+					<div class="footer-menu">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+		</footer>
+
+	</div>
+<!-- PhotoSwipe layout -->
+<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+
+	<!-- Background of PhotoSwipe. 
+             It's a separate element, as animating opacity is faster than rgba(). -->
+	<div class="pswp__bg"></div>
+
+	<!-- Slides wrapper with overflow:hidden. -->
+	<div class="pswp__scroll-wrap">
+
+		<!-- Container that holds slides. PhotoSwipe keeps only 3 slides in DOM to save memory. -->
+		<!-- don't modify these 3 pswp__item elements, data is added later on. -->
+		<div class="pswp__container">
+			<div class="pswp__item"></div>
+			<div class="pswp__item"></div>
+			<div class="pswp__item"></div>
+		</div>
+
+		<!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+		<div class="pswp__ui pswp__ui--hidden">
+
+			<div class="pswp__top-bar">
+
+				<!--  Controls are self-explanatory. Order can be changed. -->
+
+				<div class="pswp__counter"></div>
+
+				<button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+
+				<button class="pswp__button pswp__button--share" title="Share"></button>
+
+				<button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+
+				<button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+				<!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
+				<!-- element will get class pswp__preloader--active when preloader is running -->
+				<div class="pswp__preloader">
+					<div class="pswp__preloader__icn">
+						<div class="pswp__preloader__cut">
+							<div class="pswp__preloader__donut"></div>
 						</div>
 					</div>
 				</div>
+			</div>
 
+			<div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+				<div class="pswp__share-tooltip"></div>
 			</div>
-			<div class="sub-footer">
-				<div class="copyright-text">
-					<p>© Copyright 2019 Pacifica</p>
-				</div>
-				<div class="footer-menu">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-					</ul>
-				</div>
+
+			<button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+			</button>
+
+			<button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+			</button>
+
+			<div class="pswp__caption">
+				<div class="pswp__caption__center"></div>
 			</div>
+
 		</div>
 
-	</footer>
+	</div>
 
-	<!-- JavaScripts -->
-	<script type='text/javascript' src='js/jquery.min.js'></script>
-	<script type='text/javascript' src='js/bootstrap.min.js'></script>
-	<script type='text/javascript' src='js/swiper/idangerous.swiper.min.js'></script>
-	<script type='text/javascript' src='js/masonry/masonry.pkgd.min.js'></script>
-	<script type='text/javascript' src='js/isotope/jquery.isotope.min.js'></script>
-	<script type='text/javascript' src='js/custom.js'></script>
+</div>
+<!-- PhotoSwipe layout -->
+
+
+
+<!-- JavaScripts -->
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
+<script src="js/swiper/idangerous.swiper.min.js"></script>
+<script src="js/isotope/jquery.isotope.min.js"></script>
+<script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.js"></script>
+<script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe-ui-default.min.js"></script>
+<script type="text/javascript" src="js/custom.js"></script>
+<script type="text/javascript" src="js/ps.js"></script>
 
 </body>
 
