--- a/index.html
+++ b/index.html
@@ -66,12 +66,45 @@
 		</nav>
 
 	</div>
+	<!-- Collapsible sidebar -->
+	<div id="sidebar">
+
+		<!-- Widget Area -->
+		<div id="widgets">
+
+			<!-- Main menu -->
+			<nav id="mainmenu">
+				<ul>
+					<li><a href="portfolio.html">Casas</a></li>
+					<li><a href="lifestyle.html">Lifestyle</a></li>
+					<li><a href="desarrollos.html">Desarrollos</a></li>
+					<li><a href="#">El Estudio</a>
+						<ul>
+							<li><a href="quienesomos.html">Quienes Somos</a></li>
+							<li><a href="estudio.html">Fotos</a></li>
+						</ul>
+					</li>
+					<li><a href="interiores.html">Diseño de Interiores</a></li>
+					<li><a href="contacto.html">Contacto</a></li>
+					<li><a href="instagram.html">Instagram</a></li>
+
+				</ul>
+			</nav>
+
+		</div>
+
+		<!-- Copyright -->
+		<div>
+			<p class="copyright">© Copyright 2019 Pacifica</p>
+		</div>
+
+	</div>
 
 	<!-- Main wrapper -->
 	<div id="main-wrapper">
 
 		<!-- Content -->
-		<div id="content">
+		<div id="content" style="height:100%">
 
 			<!-- Fullscreen slider -->
 			<div id="fullscreen-slider" class="swiper-container swiper-home">
@@ -109,103 +142,67 @@
 					<div class="swiper-slide overlay " style="background-image: url('img/slide_7.jpg')">
 						<!-- <h1>Showcase your work with Rayleigh</h1> -->
 					</div>
-					
+
 
 				</div>
 			</div>
 
 		</div>
-
-		<!-- Collapsible sidebar -->
-		<div id="sidebar">
-
-			<!-- Widget Area -->
-			<div id="widgets">
-
-				<!-- Main menu -->
-				<nav id="mainmenu">
-					<ul>
-						<li><a href="portfolio.html">Casas</a></li>
-						<li><a href="lifestyle.html">Lifestyle</a></li>
-						<li><a href="desarrollos.html">Desarrollos</a></li>
-						<li><a href="#">El Estudio</a>
-							<ul>
-								<li><a href="quienesomos.html">Quienes Somos</a></li>
-								<li><a href="estudio.html">Fotos</a></li>
-							</ul>
-						</li>
-						<li><a href="interiores.html">Diseño de Interiores</a></li>
-						<li><a href="contacto.html">Contacto</a></li>
-						<li><a href="instagram.html">Instagram</a></li>
-
-					</ul>
-				</nav>
-
-			</div>
-
-			<!-- Copyright -->
-			<div>
-				<p class="copyright">© Copyright 2019 Pacifica</p>
-			</div>
-
-		</div>
-
-	</div>
-	<footer class="footer-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-5">
-					<div class="footer-cta">
-						<div class="footer-widget-heading">
-							<h3>Pacífica</h3>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-map-marker"></i>
-							<div class="cta-text">
-								<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
+		<footer class="footer-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-5">
+						<div class="footer-cta">
+							<div class="footer-widget-heading">
+								<h3>Pacífica</h3>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-phone"></i>
-							<div class="cta-text">
-								<span>4737.0086</span>
+							<div class="single-cta">
+								<i class="fa fa-map-marker"></i>
+								<div class="cta-text">
+									<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
+								</div>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-envelope"></i>
-							<div class="cta-text">
-								<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
+							<div class="single-cta">
+								<i class="fa fa-phone"></i>
+								<div class="cta-text">
+									<span>4737.0086</span>
+								</div>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-instagram"></i>
-							<div class="cta-text">
-								<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
+							<div class="single-cta">
+								<i class="fa fa-envelope"></i>
+								<div class="cta-text">
+									<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
+								</div>
+							</div>
+							<div class="single-cta">
+								<i class="fa fa-instagram"></i>
+								<div class="cta-text">
+									<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-xs-12 col-sm-7">
-					<div class="footer-content">
-						<div class="row">
-							<div class="col-xs-12">
-								<div class="footer-widget">
-									<div class="footer-widget-heading">
-										<h3>Sitio</h3>
+					<div class="col-xs-12 col-sm-7">
+						<div class="footer-content">
+							<div class="row">
+								<div class="col-xs-12">
+									<div class="footer-widget">
+										<div class="footer-widget-heading">
+											<h3>Sitio</h3>
+										</div>
+										<ul>
+											<li><a href="portfolio.html">Casas</a></li>
+											<li><a href="lifestyle.html">Lifestyle</a></li>
+											<li><a href="desarrollos.html">Desarrollos</a></li>
+											<li><a href="quienesomos.html">Quienes Somos</a></li>
+											<li><a href="estudio.html">Fotos</a></li>
+											<li><a href="interiores.html">Diseño de Interiores</a></li>
+											<li><a href="contacto.html">Contacto</a></li>
+											<li><a href="instagram.html">Instagram</a></li>
+										</ul>
 									</div>
-									<ul>
-										<li><a href="portfolio.html">Casas</a></li>
-										<li><a href="lifestyle.html">Lifestyle</a></li>
-										<li><a href="desarrollos.html">Desarrollos</a></li>
-										<li><a href="quienesomos.html">Quienes Somos</a></li>
-										<li><a href="estudio.html">Fotos</a></li>
-										<li><a href="interiores.html">Diseño de Interiores</a></li>
-										<li><a href="contacto.html">Contacto</a></li>
-										<li><a href="instagram.html">Instagram</a></li>
-									</ul>
 								</div>
-							</div>
-							<!-- <div class="col-xs-12 col-sm-6">
+								<!-- <div class="col-xs-12 col-sm-6">
 								<div class="footer-widget">
 									<div class="footer-widget-heading">
 										<h3>Seguinos</h3>
@@ -215,24 +212,29 @@
 									</div>
 								</div>
 							</div> -->
+							</div>
 						</div>
 					</div>
-				</div>
 
-			</div>
-			<div class="sub-footer">
-				<div class="copyright-text">
-					<p>© Copyright 2019 Pacifica</p>
 				</div>
-				<div class="footer-menu">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-					</ul>
+				<div class="sub-footer">
+					<div class="copyright-text">
+						<p>© Copyright 2019 Pacifica</p>
+					</div>
+					<div class="footer-menu">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
-		</div>
 
-	</footer>
+		</footer>
+
+
+
+	</div>
+
 
 	<!-- JavaScripts -->
 	<script type='text/javascript' src='js/jquery.min.js'></script>
