--- a/instagram.html
+++ b/instagram.html
@@ -64,6 +64,39 @@
 		<a href="#" id="portfolio-close"></a>
 
 	</div>
+	<!-- Collapsible sidebar -->
+	<div id="sidebar">
+
+		<!-- Widget Area -->
+		<div id="widgets">
+
+			<!-- Main menu -->
+			<nav id="mainmenu">
+				<ul>
+					<li><a href="portfolio.html">Casas</a></li>
+					<li><a href="lifestyle.html">Lifestyle</a></li>
+					<li><a href="desarrollos.html">Desarrollos</a></li>
+					<li><a href="#">El Estudio</a>
+						<ul>
+							<li><a href="quienesomos.html">Quienes Somos</a></li>
+							<li><a href="estudio.html">Fotos</a></li>
+						</ul>
+					</li>
+					<li><a href="interiores.html">Diseño de Interiores</a></li>
+					<li><a href="contacto.html">Contacto</a></li>
+					<li><a href="instagram.html">Instagram</a></li>
+
+				</ul>
+			</nav>
+
+		</div>
+
+		<!-- Copyright -->
+		<div>
+			<p class="copyright">© Copyright 2018 Pacifica</p>
+		</div>
+
+	</div>
 
 	<!-- Main wrapper -->
 	<div id="main-wrapper">
@@ -75,25 +108,19 @@
 			<div class="container-fluid">
 
 				<!-- Page heading -->
-				<div id="heading" class="row">
-					<div class="filter col-12">
 
-						<header>
-							<h1>Instagram</h1>
-							<h2>Quienes Somos</h2>
-						</header>
+				<header id="heading">
+					<h1>Instagram</h1>
+					<h2>Quienes Somos</h2>
+				</header>
 
-
-					</div>
-				</div>
 
 				<!-- Main content -->
 				<div class="row personal-profiles">
 
 
-
 					<!-- Personal profile -->
-					<article class="col-xs-12 col-md-4">
+					<article class="col-xs-12 col-sm-6 col-md-4">
 						<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/BspwqUchjs1/?utm_source=ig_embed&amp;utm_medium=loading"
 						 data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
 							<div style="padding:16px;"> <a href="https://www.instagram.com/p/BspwqUchjs1/?utm_source=ig_embed&amp;utm_medium=loading"
@@ -154,7 +181,7 @@
 						</blockquote>
 
 					</article>
-					<article class="col-xs-12 col-md-4">
+					<article class="col-xs-12 col-sm-6 col-md-4">
 						<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/Bsl9IQ_hafj/?utm_source=ig_embed&amp;utm_medium=loading"
 						 data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
 							<div style="padding:16px;"> <a href="https://www.instagram.com/p/Bsl9IQ_hafj/?utm_source=ig_embed&amp;utm_medium=loading"
@@ -214,7 +241,7 @@
 							</div>
 						</blockquote>
 					</article>
-					<article class="col-xs-12 col-md-4">
+					<article class="col-xs-12 col-sm-6 col-md-4">
 						<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/BseZ0y2hJfH/?utm_source=ig_embed&amp;utm_medium=loading"
 						 data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
 							<div style="padding:16px;"> <a href="https://www.instagram.com/p/BseZ0y2hJfH/?utm_source=ig_embed&amp;utm_medium=loading"
@@ -272,7 +299,7 @@
 							</div>
 						</blockquote>
 					</article>
-					<article class="col-xs-12 col-md-4">
+					<article class="col-xs-12 col-sm-6 col-md-4">
 						<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/BsbtsjWBRtU/?utm_source=ig_embed&amp;utm_medium=loading"
 						 data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
 							<div style="padding:16px;"> <a href="https://www.instagram.com/p/BsbtsjWBRtU/?utm_source=ig_embed&amp;utm_medium=loading"
@@ -330,7 +357,7 @@
 							</div>
 						</blockquote>
 					</article>
-					<article class="col-xs-12 col-md-4">
+					<article class="col-xs-12 col-sm-6 col-md-4">
 						<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/BsV64h3B8u7/?utm_source=ig_embed&amp;utm_medium=loading"
 						 data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
 							<div style="padding:16px;"> <a href="https://www.instagram.com/p/BsV64h3B8u7/?utm_source=ig_embed&amp;utm_medium=loading"
@@ -388,7 +415,7 @@
 							</div>
 						</blockquote>
 					</article>
-					<article class="col-xs-12 col-md-4">
+					<article class="col-xs-12 col-sm-6 col-md-4">
 						<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/BsQR3E-hsbO/?utm_source=ig_embed&amp;utm_medium=loading"
 						 data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
 							<div style="padding:16px;"> <a href="https://www.instagram.com/p/BsQR3E-hsbO/?utm_source=ig_embed&amp;utm_medium=loading"
@@ -453,97 +480,61 @@
 			</div>
 
 		</div>
-
-		<!-- Collapsible sidebar -->
-		<div id="sidebar">
-
-			<!-- Widget Area -->
-			<div id="widgets">
-
-				<!-- Main menu -->
-				<nav id="mainmenu">
-					<ul>
-						<li><a href="portfolio.html">Casas</a></li>
-						<li><a href="lifestyle.html">Lifestyle</a></li>
-						<li><a href="desarrollos.html">Desarrollos</a></li>
-						<li><a href="#">El Estudio</a>
-							<ul>
-								<li><a href="quienesomos.html">Quienes Somos</a></li>
-								<li><a href="estudio.html">Fotos</a></li>
-							</ul>
-						</li>
-						<li><a href="interiores.html">Diseño de Interiores</a></li>
-						<li><a href="contacto.html">Contacto</a></li>
-						<li><a href="instagram.html">Instagram</a></li>
-
-					</ul>
-				</nav>
-
-			</div>
-
-			<!-- Copyright -->
-			<div>
-				<p class="copyright">© Copyright 2018 Pacifica</p>
-			</div>
-
-		</div>
-
-	</div>
-	<footer class="footer-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-5">
-					<div class="footer-cta">
-						<div class="footer-widget-heading">
-							<h3>Pacífica</h3>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-map-marker"></i>
-							<div class="cta-text">
-								<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
+		<footer class="footer-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-5">
+						<div class="footer-cta">
+							<div class="footer-widget-heading">
+								<h3>Pacífica</h3>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-phone"></i>
-							<div class="cta-text">
-								<span>4737.0086</span>
+							<div class="single-cta">
+								<i class="fa fa-map-marker"></i>
+								<div class="cta-text">
+									<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
+								</div>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-envelope"></i>
-							<div class="cta-text">
-								<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
+							<div class="single-cta">
+								<i class="fa fa-phone"></i>
+								<div class="cta-text">
+									<span>4737.0086</span>
+								</div>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-instagram"></i>
-							<div class="cta-text">
-								<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
+							<div class="single-cta">
+								<i class="fa fa-envelope"></i>
+								<div class="cta-text">
+									<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
+								</div>
+							</div>
+							<div class="single-cta">
+								<i class="fa fa-instagram"></i>
+								<div class="cta-text">
+									<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-xs-12 col-sm-7">
-					<div class="footer-content">
-						<div class="row">
-							<div class="col-xs-12">
-								<div class="footer-widget">
-									<div class="footer-widget-heading">
-										<h3>Sitio</h3>
+					<div class="col-xs-12 col-sm-7">
+						<div class="footer-content">
+							<div class="row">
+								<div class="col-xs-12">
+									<div class="footer-widget">
+										<div class="footer-widget-heading">
+											<h3>Sitio</h3>
+										</div>
+										<ul>
+											<li><a href="portfolio.html">Casas</a></li>
+											<li><a href="lifestyle.html">Lifestyle</a></li>
+											<li><a href="desarrollos.html">Desarrollos</a></li>
+											<li><a href="quienesomos.html">Quienes Somos</a></li>
+											<li><a href="estudio.html">Fotos</a></li>
+											<li><a href="interiores.html">Diseño de Interiores</a></li>
+											<li><a href="contacto.html">Contacto</a></li>
+											<li><a href="instagram.html">Instagram</a></li>
+										</ul>
 									</div>
-									<ul>
-										<li><a href="portfolio.html">Casas</a></li>
-										<li><a href="lifestyle.html">Lifestyle</a></li>
-										<li><a href="desarrollos.html">Desarrollos</a></li>
-										<li><a href="quienesomos.html">Quienes Somos</a></li>
-										<li><a href="estudio.html">Fotos</a></li>
-										<li><a href="interiores.html">Diseño de Interiores</a></li>
-										<li><a href="contacto.html">Contacto</a></li>
-										<li><a href="instagram.html">Instagram</a></li>
-									</ul>
 								</div>
-							</div>
-							<!-- <div class="col-xs-12 col-sm-6">
+								<!-- <div class="col-xs-12 col-sm-6">
 								<div class="footer-widget">
 									<div class="footer-widget-heading">
 										<h3>Seguinos</h3>
@@ -553,24 +544,29 @@
 									</div>
 								</div>
 							</div> -->
+							</div>
 						</div>
 					</div>
-				</div>
 
-			</div>
-			<div class="sub-footer">
-				<div class="copyright-text">
-					<p>© Copyright 2019 Pacifica</p>
 				</div>
-				<div class="footer-menu">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-					</ul>
+				<div class="sub-footer">
+					<div class="copyright-text">
+						<p>© Copyright 2019 Pacifica</p>
+					</div>
+					<div class="footer-menu">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
-		</div>
 
-	</footer>
+		</footer>
+
+
+
+	</div>
+
 
 	<!-- JavaScripts -->
 	<script type='text/javascript' src='js/jquery.min.js'></script>
