--- a/quienesomos.html
+++ b/quienesomos.html
@@ -64,6 +64,39 @@
 		<a href="#" id="portfolio-close"></a>
 
 	</div>
+	<!-- Collapsible sidebar -->
+	<div id="sidebar">
+
+		<!-- Widget Area -->
+		<div id="widgets">
+
+			<!-- Main menu -->
+			<nav id="mainmenu">
+				<ul>
+					<li><a href="portfolio.html">Casas</a></li>
+					<li><a href="lifestyle.html">Lifestyle</a></li>
+					<li><a href="desarrollos.html">Desarrollos</a></li>
+					<li><a href="#">El Estudio</a>
+						<ul>
+							<li><a href="quienesomos.html">Quienes Somos</a></li>
+							<li><a href="estudio.html">Fotos</a></li>
+						</ul>
+					</li>
+					<li><a href="interiores.html">Diseño de Interiores</a></li>
+					<li><a href="contacto.html">Contacto</a></li>
+					<li><a href="instagram.html">Instagram</a></li>
+
+				</ul>
+			</nav>
+
+		</div>
+
+		<!-- Copyright -->
+		<div>
+			<p class="copyright">© Copyright 2018 Pacifica</p>
+		</div>
+
+	</div>
 
 	<!-- Main wrapper -->
 	<div id="main-wrapper">
@@ -72,36 +105,20 @@
 		<div id="content" class="isotope-container">
 
 			<!-- Fluid container -->
-			<div class="container-fluid">
+			<div class="container">
 
 				<!-- Page heading -->
-				<div id="heading" class="row">
-					<div class="filter col-12">
 
-						<header>
-							<h1>El Estudio</h1>
-							<h2>Quienes Somos</h2>
-						</header>
+				<header id="heading">
+					<h1>El Estudio</h1>
+					<h2>Quienes Somos</h2>
+				</header>
 
 
-					</div>
-				</div>
 
 				<!-- Main content -->
 				<div class="row personal-profiles">
 
-
-
-					<!-- Personal profile -->
-					<!-- <article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-							<div class="image" style="background-image: url(img/team/b/quienesomos_01.jpg)"></a>
-							<div class="inner">
-								<header>
-									<h3>Ezequiel Gil</h3>
-									<p>Arquitecto. Socio</p>
-								</header>
-							</div>
-						</article> -->
 
 					<!-- Personal profile -->
 					<article class="portfolio portfolio-todos team-card col-12">
@@ -228,96 +245,62 @@
 
 		</div>
 
-		<!-- Collapsible sidebar -->
-		<div id="sidebar">
 
-			<!-- Widget Area -->
-			<div id="widgets">
-
-				<!-- Main menu -->
-				<nav id="mainmenu">
-					<ul>
-						<li><a href="portfolio.html">Casas</a></li>
-						<li><a href="lifestyle.html">Lifestyle</a></li>
-						<li><a href="desarrollos.html">Desarrollos</a></li>
-						<li><a href="#">El Estudio</a>
-							<ul>
-								<li><a href="quienesomos.html">Quienes Somos</a></li>
-								<li><a href="estudio.html">Fotos</a></li>
-							</ul>
-						</li>
-						<li><a href="interiores.html">Diseño de Interiores</a></li>
-						<li><a href="contacto.html">Contacto</a></li>
-						<li><a href="instagram.html">Instagram</a></li>
-
-					</ul>
-				</nav>
-
-			</div>
-
-			<!-- Copyright -->
-			<div>
-				<p class="copyright">© Copyright 2018 Pacifica</p>
-			</div>
-
-		</div>
-
-	</div>
-	<footer class="footer-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-5">
-					<div class="footer-cta">
-						<div class="footer-widget-heading">
-							<h3>Pacífica</h3>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-map-marker"></i>
-							<div class="cta-text">
-								<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
+		<footer class="footer-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-5">
+						<div class="footer-cta">
+							<div class="footer-widget-heading">
+								<h3>Pacífica</h3>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-phone"></i>
-							<div class="cta-text">
-								<span>4737.0086</span>
+							<div class="single-cta">
+								<i class="fa fa-map-marker"></i>
+								<div class="cta-text">
+									<span>Sucre 1767 Of. 10 - 1º, San Isidro</span>
+								</div>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-envelope"></i>
-							<div class="cta-text">
-								<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
+							<div class="single-cta">
+								<i class="fa fa-phone"></i>
+								<div class="cta-text">
+									<span>4737.0086</span>
+								</div>
 							</div>
-						</div>
-						<div class="single-cta">
-							<i class="fa fa-instagram"></i>
-							<div class="cta-text">
-								<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
+							<div class="single-cta">
+								<i class="fa fa-envelope"></i>
+								<div class="cta-text">
+									<span><a href="mailto:estudio@pacificaarquitectura.com"></a>estudio@pacificaarquitectura.com</span>
+								</div>
+							</div>
+							<div class="single-cta">
+								<i class="fa fa-instagram"></i>
+								<div class="cta-text">
+									<span><a href="https://www.instagram.com/arq.ezequielgil/"></a>@arq.ezequielgil</span>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-xs-12 col-sm-7">
-					<div class="footer-content">
-						<div class="row">
-							<div class="col-xs-12">
-								<div class="footer-widget">
-									<div class="footer-widget-heading">
-										<h3>Sitio</h3>
+					<div class="col-xs-12 col-sm-7">
+						<div class="footer-content">
+							<div class="row">
+								<div class="col-xs-12">
+									<div class="footer-widget">
+										<div class="footer-widget-heading">
+											<h3>Sitio</h3>
+										</div>
+										<ul>
+											<li><a href="portfolio.html">Casas</a></li>
+											<li><a href="lifestyle.html">Lifestyle</a></li>
+											<li><a href="desarrollos.html">Desarrollos</a></li>
+											<li><a href="quienesomos.html">Quienes Somos</a></li>
+											<li><a href="estudio.html">Fotos</a></li>
+											<li><a href="interiores.html">Diseño de Interiores</a></li>
+											<li><a href="contacto.html">Contacto</a></li>
+											<li><a href="instagram.html">Instagram</a></li>
+										</ul>
 									</div>
-									<ul>
-										<li><a href="portfolio.html">Casas</a></li>
-										<li><a href="lifestyle.html">Lifestyle</a></li>
-										<li><a href="desarrollos.html">Desarrollos</a></li>
-										<li><a href="quienesomos.html">Quienes Somos</a></li>
-										<li><a href="estudio.html">Fotos</a></li>
-										<li><a href="interiores.html">Diseño de Interiores</a></li>
-										<li><a href="contacto.html">Contacto</a></li>
-										<li><a href="instagram.html">Instagram</a></li>
-									</ul>
 								</div>
-							</div>
-							<!-- <div class="col-xs-12 col-sm-6">
+								<!-- <div class="col-xs-12 col-sm-6">
 								<div class="footer-widget">
 									<div class="footer-widget-heading">
 										<h3>Seguinos</h3>
@@ -327,24 +310,27 @@
 									</div>
 								</div>
 							</div> -->
+							</div>
 						</div>
 					</div>
-				</div>
 
-			</div>
-			<div class="sub-footer">
-				<div class="copyright-text">
-					<p>© Copyright 2019 Pacifica</p>
 				</div>
-				<div class="footer-menu">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-					</ul>
+				<div class="sub-footer">
+					<div class="copyright-text">
+						<p>© Copyright 2019 Pacifica</p>
+					</div>
+					<div class="footer-menu">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
-		</div>
 
-	</footer>
+		</footer>
+
+	</div>
+
 
 	<!-- JavaScripts -->
 	<script type='text/javascript' src='js/jquery.min.js'></script>
