Ajustes imágenes Quienes Somos

--- a/quienesomos.html
+++ b/quienesomos.html
@@ -138,98 +138,98 @@
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image" style="background-image: url(img/team/b/quienesomos_01.jpg)"></div>
+						<div class="image worker" style="background-image: url(img/team/b/quienesomos_01.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Ezequiel Gil</h3>
-								<p>Arquitecto Socio</p>
+								<p class="position">Arquitecto Socio</p>
 							</header>
 						</div>
 					</article>
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image" style="background-image: url(img/team/b/quienesomos_02.jpg)"></div>
+						<div class="image worker" style="background-image: url(img/team/b/quienesomos_02.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Félix Gil</h3>
-								<p>Ingeniero. Socio</p>
+								<p class="position">Ingeniero. Socio</p>
 							</header>
 						</div>
 					</article>
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image" style="background-image: url(img/team/b/quienesomos_03.jpg)"></div>
+						<div class="image worker" style="background-image: url(img/team/b/quienesomos_03.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Verónica Jijena Sánchez</h3>
-								<p>Diseño de interiores</p>
+								<p class="position">Diseño de interiores</p>
 							</header>
 						</div>
 					</article>
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image" style="background-image: url(img/team/b/quienesomos_04.jpg)"></div>
+						<div class="image worker" style="background-image: url(img/team/b/quienesomos_04.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>María Belén Putruele</h3>
-								<p>Arquitecta. Project Manager</p>
+								<p class="position">Arquitecta. Manager de proyecto</p>
 							</header>
 						</div>
 					</article>
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image" style="background-image: url(img/team/b/quienesomos_05.jpg)"></div>
+						<div class="image worker" style="background-image: url(img/team/b/quienesomos_05.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Martín Bayley</h3>
-								<p>Arquitecto. Departamento de obras</p>
+								<p class="position">Arquitecto. Departamento de obras</p>
 							</header>
 						</div>
 					</article>
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image" style="background-image: url(img/team/b/quienesomos_06.jpg)"></div>
+						<div class="image worker" style="background-image: url(img/team/b/quienesomos_06.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Gastón Vernengo Lima</h3>
-								<p>Arquitecto. Jefe de proyectos</p>
+								<p class="position">Arquitecto. Jefe de proyectos</p>
 							</header>
 						</div>
 					</article>
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image" style="background-image: url(img/team/b/quienesomos_07.jpg)"></div>
+						<div class="image worker" style="background-image: url(img/team/b/quienesomos_07.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Milagros García Blanco</h3>
-								<p>Arquitecta</p>
+								<p class="position">Arquitecta</p>
 							</header>
 						</div>
 					</article>
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image" style="background-image: url(img/team/b/quienesomos_08.jpg)"></div>
+						<div class="image worker" style="background-image: url(img/team/b/quienesomos_08.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Juana Cichini</h3>
-								<p>Arquitecta</p>
+								<p class="position">Arquitecta</p>
 							</header>
 						</div>
 					</article>
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image" style="background-image: url(img/team/b/quienesomos_09.jpg)"></div>
+						<div class="image worker" style="background-image: url(img/team/b/quienesomos_09.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Joaquín Primón</h3>
-								<p>Dibujante</p>
+								<p class="position">Dibujante</p>
 							</header>
 						</div>
 					</article>
