ajustes galeria mobile de casas

--- a/desarrollos.html
+++ b/desarrollos.html
@@ -121,7 +121,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="#jingenieros" class="image" style="background-image: url(img/desarrollos/jingenierios_portada.jpg)">
+						<a href="" class="image" style="background-image: url(img/desarrollos/jingenierios_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">JOSÉ INGENIEROS</h3>
