ajustes de galería width-fijo

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
 						<li><a href="estudio.html">Fotos</a></li>
 					</ul>
 				</li>
-				<li><a href="interiores_2.html">Diseño de Interiores</a></li>
+				<li><a href="interiores.html">Diseño de Interiores</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
 				<li><a href="instagram.html">Instagram</a></li>
 
@@ -101,7 +101,7 @@
 		<div id="content" class="isotope-container">
 
 			<!-- Fluid container -->
-			<div class="container-fluid">
+			<div class="container">
 
 				<!-- Page heading -->
 
