--- a/desarrollos.html
+++ b/desarrollos.html
@@ -104,7 +104,7 @@
 		<div id="content">
 
 			<!-- Fluid container -->
-			<div class="container-fluid">
+			<div class="container">
 
 				<!-- Page heading -->
 
