--- a/quienesomos.html
+++ b/quienesomos.html
@@ -138,7 +138,7 @@
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image worker" style="background-image: url(img/team/b/quienesomos_01.jpg)"></div>
+						<div class="image leader" style="background-image: url(img/team/b/quienesomos_01.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Ezequiel Gil</h3>
@@ -148,7 +148,7 @@
 					</article>
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image worker" style="background-image: url(img/team/b/quienesomos_02.jpg)"></div>
+						<div class="image" style="background-image: url(img/team/quienesomos_02.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Félix Gil</h3>
@@ -159,7 +159,7 @@
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image worker" style="background-image: url(img/team/b/quienesomos_03.jpg)"></div>
+						<div class="image" style="background-image: url(img/team/quienesomos_03.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Verónica Jijena Sánchez</h3>
@@ -170,7 +170,7 @@
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image worker" style="background-image: url(img/team/b/quienesomos_04.jpg)"></div>
+						<div class="image" style="background-image: url(img/team/quienesomos_04.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>María Belén Putruele</h3>
@@ -181,7 +181,7 @@
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image worker" style="background-image: url(img/team/b/quienesomos_05.jpg)"></div>
+						<div class="image" style="background-image: url(img/team/quienesomos_05.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Martín Bayley</h3>
@@ -192,7 +192,7 @@
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image worker" style="background-image: url(img/team/b/quienesomos_06.jpg)"></div>
+						<div class="image" style="background-image: url(img/team/quienesomos_06.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Gastón Vernengo Lima</h3>
@@ -203,7 +203,7 @@
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image worker" style="background-image: url(img/team/b/quienesomos_07.jpg)"></div>
+						<div class="image" style="background-image: url(img/team/quienesomos_07.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Milagros García Blanco</h3>
@@ -214,7 +214,7 @@
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image worker" style="background-image: url(img/team/b/quienesomos_08.jpg)"></div>
+						<div class="image" style="background-image: url(img/team/quienesomos_08.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Juana Cichini</h3>
@@ -225,7 +225,7 @@
 
 					<!-- Personal profile -->
 					<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
-						<div class="image worker" style="background-image: url(img/team/b/quienesomos_09.jpg)"></div>
+						<div class="image" style="background-image: url(img/team/quienesomos_09.jpg)"></div>
 						<div class="inner">
 							<header>
 								<h3>Joaquín Primón</h3>
