nuevo complemento swipe

--- a/desarrollos.html
+++ b/desarrollos.html
@@ -32,12 +32,16 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="css/idangerous.swiper.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="css/idangerous.swiper.css" />   
+    <link rel="stylesheet" href="css/justifiedGallery.min.css">
+    <link rel="stylesheet" href="css/colorbox.css">
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="css/style.css" />
 
 </head>
 
@@ -293,12 +297,13 @@
 	</div>
 
 	<!-- JavaScripts -->
-	<script type='text/javascript' src='js/jquery.min.js'></script>
-	<script type='text/javascript' src='js/bootstrap.min.js'></script>
-	<script type='text/javascript' src='js/swiper/idangerous.swiper.min.js'></script>
-	<script type='text/javascript' src='js/masonry/masonry.pkgd.min.js'></script>
-	<script type='text/javascript' src='js/isotope/jquery.isotope.min.js'></script>
-	<script type='text/javascript' src='js/custom.js'></script>
+	 <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/idangerous.swiper.min.js"></script>   
+    <script type="text/javascript" src="js/colorbox.js"></script>
+    <script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
+    <script type="text/javascript" src="js/ps.js"></script>
 
 </body>
 
