--- a/portfolio.html
+++ b/portfolio.html
@@ -31,13 +31,17 @@
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="css/idangerous.swiper.css">
-	<link rel="stylesheet" href="css/style.css">
+	<!-- VENDORS -->
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="css/idangerous.swiper.css" />   
+    <link rel="stylesheet" href="css/justifiedGallery.min.css">
+    <link rel="stylesheet" href="css/colorbox.css">
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="css/style.css" />
 
 </head>
 
@@ -116,7 +120,7 @@
 
 					<!-- Portfolio item -->
 					<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-						<a href="cincofuegos.html" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)">
+						<a href="cincofuegos_b.html" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)">
 							<div class="content-overlay"></div>
 							<div class="content-details fadeIn-right">
 								<h3 class="content-title">CINCO FUEGOS</h3>
@@ -474,12 +478,14 @@
 
 
 	<!-- JavaScripts -->
-	<script type='text/javascript' src='js/jquery.min.js'></script>
-	<script type='text/javascript' src='js/bootstrap.min.js'></script>
-	<script type='text/javascript' src='js/swiper/idangerous.swiper.min.js'></script>
-	<script type='text/javascript' src='js/masonry/masonry.pkgd.min.js'></script>
-	<script type='text/javascript' src='js/isotope/jquery.isotope.min.js'></script>
-	<script type='text/javascript' src='js/custom.js'></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/idangerous.swiper.min.js"></script>   
+    <script type="text/javascript" src="js/colorbox.js"></script>
+    <script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
+    <script type="text/javascript" src="js/ps.js"></script>
+    
 
 </body>
 
