--- a/estudio.html
+++ b/estudio.html
@@ -31,15 +31,17 @@
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="css/idangerous.swiper.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/default-skin/default-skin.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	 <!-- VENDORS -->
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="css/idangerous.swiper.css" />   
+    <link rel="stylesheet" href="css/justifiedGallery.min.css">
+    <link rel="stylesheet" href="css/colorbox.css">
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="css/style.css" />
 
 </head>
 
@@ -285,85 +287,15 @@
 		</footer>
 
 	</div>
-<!-- PhotoSwipe layout -->
-<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 
-	<!-- Background of PhotoSwipe. 
-             It's a separate element, as animating opacity is faster than rgba(). -->
-	<div class="pswp__bg"></div>
-
-	<!-- Slides wrapper with overflow:hidden. -->
-	<div class="pswp__scroll-wrap">
-
-		<!-- Container that holds slides. PhotoSwipe keeps only 3 slides in DOM to save memory. -->
-		<!-- don't modify these 3 pswp__item elements, data is added later on. -->
-		<div class="pswp__container">
-			<div class="pswp__item"></div>
-			<div class="pswp__item"></div>
-			<div class="pswp__item"></div>
-		</div>
-
-		<!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
-		<div class="pswp__ui pswp__ui--hidden">
-
-			<div class="pswp__top-bar">
-
-				<!--  Controls are self-explanatory. Order can be changed. -->
-
-				<div class="pswp__counter"></div>
-
-				<button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-
-				<button class="pswp__button pswp__button--share" title="Share"></button>
-
-				<button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-
-				<button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
-
-				<!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
-				<!-- element will get class pswp__preloader--active when preloader is running -->
-				<div class="pswp__preloader">
-					<div class="pswp__preloader__icn">
-						<div class="pswp__preloader__cut">
-							<div class="pswp__preloader__donut"></div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-				<div class="pswp__share-tooltip"></div>
-			</div>
-
-			<button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-			</button>
-
-			<button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-			</button>
-
-			<div class="pswp__caption">
-				<div class="pswp__caption__center"></div>
-			</div>
-
-		</div>
-
-	</div>
-
-</div>
-<!-- PhotoSwipe layout -->
-
-
-
-<!-- JavaScripts -->
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
-<script src="js/swiper/idangerous.swiper.min.js"></script>
-<script src="js/isotope/jquery.isotope.min.js"></script>
-<script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.js"></script>
-<script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe-ui-default.min.js"></script>
-<script type="text/javascript" src="js/custom.js"></script>
-<script type="text/javascript" src="js/ps.js"></script>
+	<!-- JavaScripts -->
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/idangerous.swiper.min.js"></script>   
+    <script type="text/javascript" src="js/colorbox.js"></script>
+    <script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
+    <script type="text/javascript" src="js/ps.js"></script>
 
 </body>
 
