corrección link a cincofuegos

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,15 +32,15 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- VENDORS -->
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/reset.css" />
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/font-awesome.min.css" />
-	
-    <link rel="stylesheet" href="css/idangerous.swiper.css" />   
-    <link rel="stylesheet" href="css/justifiedGallery.min.css">
-    <link rel="stylesheet" href="css/colorbox.css">
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+
+	<link rel="stylesheet" href="css/idangerous.swiper.css" />
+	<link rel="stylesheet" href="css/justifiedGallery.min.css">
+	<link rel="stylesheet" href="css/colorbox.css">
+	<!-- CUSTOM CSS -->
+	<link rel="stylesheet" href="css/style.css" />
 
 </head>
 
@@ -59,7 +59,7 @@
 		<header id="logo">
 			<a href="index.html">
 				<h1>Pacífica</h1>
-			</a>			
+			</a>
 		</header>
 
 	</div>
@@ -73,7 +73,7 @@
 			<nav id="mainmenu">
 				<ul>
 					<li><a href="portfolio.html">Casas</a></li>
-					<li><a href="lifestyle_2.html">Lifestyle</a></li>
+					<li><a href="lifestyle.html">Lifestyle</a></li>
 					<li><a href="desarrollos.html">Desarrollos</a></li>
 					<li><a href="#">El Estudio</a>
 						<ul>
@@ -100,7 +100,7 @@
 	<!-- Main wrapper -->
 	<div id="main-wrapper">
 
-		
+
 
 		<!-- Fluid container -->
 		<div class="container">
@@ -118,7 +118,7 @@
 
 				<!-- Portfolio item -->
 				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
-					<a href="cincofuegos_b.html" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)">
+					<a href="cincofuegos.html" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
 							<h3 class="content-title">CINCO FUEGOS</h3>
@@ -385,7 +385,7 @@
 
 		</div>
 
-		
+
 		<footer class="footer-section">
 			<div class="container">
 				<div class="row">
@@ -476,14 +476,14 @@
 
 
 	<!-- JavaScripts -->
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/idangerous.swiper.min.js"></script>   
-    <script type="text/javascript" src="js/colorbox.js"></script>
-    <script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
-    <script type="text/javascript" src="js/ps.js"></script>
-    
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/idangerous.swiper.min.js"></script>
+	<script type="text/javascript" src="js/colorbox.js"></script>
+	<script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
+	<script type="text/javascript" src="js/ps.js"></script>
+
 
 </body>
 
